--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -12,7 +12,7 @@
     top: 0 !important;
     left: 0 !important;
     width: 100% !important;
-    z-index: 99999 !important;
+    z-index: 2147483647 !important;
     height: 70px;
     transform: translateZ(0);
     opacity: 1 !important;
